# YOLOPv2-YOLOv8-NCNN-Android

./: .gitignore  LICENSE  README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/yolopv2ncnn/: MainActivity.java  Yolopv2Ncnn.java
app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  ndkcamera.h  yolopv2.cpp  yolopv2.h  yolopv2ncnn.cpp  yolov8.cpp  yolov8.h
app/src/main/res/layout/: main.xml  zoom_dialog.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
